# bushido-teclab-firmware

./: .gitignore  CMakeLists.txt  README.md  sdkconfig.defaults
.github/workflows/: build-pad-premium.yml
components/esp_port/: esp_es8311_port.cpp  esp_es8311_port.h
esp32-pad/: .gitignore  esp32-pad.ino
main/: CMakeLists.txt  main.cpp
main/assets/: logoteclab.c
main/ui/: bushido_device_page.c  bushido_device_page.h  bushido_settings_page.c  bushido_settings_page.h  bushido_training_menu_page.c  bushido_training_menu_page.h  bushido_training_page.c  bushido_training_page.h  ui.c  ui.h  ui_events.h  ui_helpers.c  ui_helpers.h
main/ui/components/: ui_comp.c  ui_comp.h  ui_comp_aaa.c  ui_comp_aaa.h  ui_comp_hook.c  ui_comp_hook.h  ui_comp_imgallenamento.c  ui_comp_imgallenamento.h
main/ui/images/: ui_img_imgallenamento_png.c  ui_img_imgaudio_png.c  ui_img_imgdispositivo_png.c  ui_img_imgimpostazioni_png.c  ui_img_imgwifi_png.c  ui_img_logoteclab_png.c
main/ui/screens/: ui_HOME.c  ui_HOME.h  ui_SPLASH.c  ui_SPLASH.h
